fixed quote and title alignment

--- a/assets/style.css
+++ b/assets/style.css
@@ -11,7 +11,7 @@ header {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
-    height: 120px;
+    height: 150px;
     border-radius: 10px;
     background-color: blue;
     background-image: linear-gradient(to right, blue, yellow);
@@ -26,7 +26,7 @@ header {
     height: 30%;
     width: 10%;  
     padding: 1%;
-    margin-top: 13px;
+    margin-top: 20px;
     margin-left: 15px;
     text-overflow: clip;
     background-color: rgb(248, 51, 51);
@@ -50,7 +50,7 @@ header {
     flex-wrap: wrap;
     flex-shrink: 1;
     height: 77%;
-    width: 19%; 
+    width: 16%; 
     margin-top: 12px;
     margin-right: 15px;
     font-size: 24px;
@@ -71,16 +71,19 @@ nav a:hover {
     display: flex;
     flex-wrap: wrap;
     flex-direction: column;
-    justify-content: center;
-    text-align: center;
-    margin-top: 2%;
-    margin-left: 20%;
-    margin-right: 62%;
+    justify-content: center;    
     font-size: 30px;
     border-radius: 5px;
     color: white;
     background-color: rgb(128, 128, 128, .5);
 
+}
+.quote {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    margin-left: 20%;
+    margin-right: 20%;
 }
 
 /* hero image partent */
@@ -359,7 +362,6 @@ nav a:hover {
     gap: 10px;
     background-color: blue;
     background-image: linear-gradient(to right, blue, yellow);
-    ;
-}
+    }
 
 
